Added new datasheet revision button to datasheets index

--- a/app/views/datasheets/index.html.erb
+++ b/app/views/datasheets/index.html.erb
@@ -7,7 +7,10 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Datasheets</h1>
-    <%= link_to "New datasheet", new_datasheet_path, class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white block font-medium" %>
+    <div class="flex space-x-2">
+      <%= link_to "New datasheet revision", new_datasheet_revision_path, class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white block font-medium" %>
+      <%= link_to "New datasheet", new_datasheet_path, class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white block font-medium" %>
+    </div>
   </div>
 
   <div id="datasheets" class="min-w-full divide-y divide-gray-200 space-y-5">
